<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Article</string>
    <string name="article">Article</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="title">Title:</string>
    <string name="abs">Abstract:</string>
    <string name="url">URL:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
