<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:gravity="center">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent">
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" 
        	android:layout_marginRight="24dp"
        	android:text="@string/title">
        </TextView>
      	<EditText 
      		android:id="@+id/edit_article_title"
      		android:layout_width="fill_parent"
        	android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>  
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent">
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" 
        	android:text="@string/abs">
        </TextView>
      	<EditText 
      		android:id="@+id/edit_article_abstract"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
        </EditText>
    </LinearLayout>  
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent">
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" 
        	android:layout_marginRight="27dp"
        	android:text="@string/url">
        </TextView>
      	<EditText 
      		android:id="@+id/edit_article_url"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
        </EditText>
    </LinearLayout>  
	<LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button 
    		android:id="@+id/button_modify"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/modify">
    	</Button>
    	<Button 
    		android:id="@+id/button_delete"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/delete">
    	</Button>
        <Button 
    		android:id="@+id/button_add_article"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:paddingLeft="16dp"
    		android:paddingRight="16dp"
    		android:text="@string/add">
    	</Button>
    	<Button 
    		android:id="@+id/button_cancel"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/cancel">
    	</Button>
    </LinearLayout>  
</LinearLayout>